Double undo in sculpt mode after lasso mask. Follow up for Maniphest T55033 #55399

Closed
opened 2018-06-08 12:54:29 +02:00 by Erick Tukuniata · 5 comments

System Information
win7 gtx 550ti

Blender Version
Broken: sadly i didn't see any hash here, this a follow up for Maniphest #55033
Worked: (optional):hash before undo changes?

Short description of error
Double undo in sculpt mode after lasso mask.

Exact steps for others to reproduce the error

  • In dyntopo sculpt some and lasso mask some part.
  • Notice that you have to undo twice before undo happens.
**System Information** win7 gtx 550ti **Blender Version** Broken: sadly i didn't see any hash here, this a follow up for Maniphest #55033 Worked: (optional):hash before undo changes? **Short description of error** Double undo in sculpt mode after lasso mask. **Exact steps for others to reproduce the error** - In dyntopo sculpt some and lasso mask some part. - Notice that you have to undo twice before undo happens.

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-06-15 16:10:59 +02:00
Member

Note: we are getting two undo pushes with this operator [same for box mask btw.]

1  sculpt_undosys_step_encode      sculpt_undo.c     1034 0x1e58737 
2  undosys_step_encode             undo_system.c     149  0x27825b1 
3  BKE_undosys_step_push_with_type undo_system.c     454  0x2783a27 
4  BKE_undosys_step_push           undo_system.c     474  0x2783b47 
5  sculpt_undo_push_end            sculpt_undo.c     998  0x1e58685 
6  paint_mask_gesture_lasso_exec   paint_mask.c      512  0x1e1830d 
7  gesture_lasso_apply             wm_gesture_ops.c  612  0x185d0c8 
8  WM_gesture_lasso_modal          wm_gesture_ops.c  658  0x185d2f5 

and

1  sculpt_undosys_step_encode      sculpt_undo.c     1034 0x1e58737 
2  undosys_step_encode             undo_system.c     149  0x27825b1 
3  BKE_undosys_step_push_with_type undo_system.c     454  0x2783a27 
4  BKE_undosys_step_push           undo_system.c     474  0x2783b47 
5  ED_undo_push                    ed_undo.c         91   0x187a2db 
6  ED_undo_push_op                 ed_undo.c         168  0x187a5d0 
7  wm_operator_finished            wm_event_system.c 755  0x184f035 
8  wm_handler_operator_call        wm_event_system.c 1821 0x1851c1a 

Not sure if this is intended?

Of course, since the exec comes with its "own" undo call sculpt_undo_push_end, we could remove OPTYPE_UNDO [like e.g. mask fill] from the operator flags, but that's removing (amongst other things) the ability to redo as well...

Soo, passing this on to @ideasman42 ...

Note: we are getting two undo pushes with this operator [same for box mask btw.] ``` 1 sculpt_undosys_step_encode sculpt_undo.c 1034 0x1e58737 2 undosys_step_encode undo_system.c 149 0x27825b1 3 BKE_undosys_step_push_with_type undo_system.c 454 0x2783a27 4 BKE_undosys_step_push undo_system.c 474 0x2783b47 5 sculpt_undo_push_end sculpt_undo.c 998 0x1e58685 6 paint_mask_gesture_lasso_exec paint_mask.c 512 0x1e1830d 7 gesture_lasso_apply wm_gesture_ops.c 612 0x185d0c8 8 WM_gesture_lasso_modal wm_gesture_ops.c 658 0x185d2f5 ``` and ``` 1 sculpt_undosys_step_encode sculpt_undo.c 1034 0x1e58737 2 undosys_step_encode undo_system.c 149 0x27825b1 3 BKE_undosys_step_push_with_type undo_system.c 454 0x2783a27 4 BKE_undosys_step_push undo_system.c 474 0x2783b47 5 ED_undo_push ed_undo.c 91 0x187a2db 6 ED_undo_push_op ed_undo.c 168 0x187a5d0 7 wm_operator_finished wm_event_system.c 755 0x184f035 8 wm_handler_operator_call wm_event_system.c 1821 0x1851c1a ``` Not sure if this is intended? Of course, since the exec comes with its "own" undo call `sculpt_undo_push_end`, we could remove `OPTYPE_UNDO` [like e.g. `mask fill`] from the operator flags, but that's removing (amongst other things) the ability to redo as well... Soo, passing this on to @ideasman42 ...

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks @lichtwerk for looking into this, the bug doesn't exist anymore - but it's still strange to use the flag in one operator and not another.

Removed 8f4b7d706b

Thanks @lichtwerk for looking into this, the bug doesn't exist anymore - but it's still strange to use the flag in one operator and not another. Removed 8f4b7d706b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55399
No description provided.